# sunbraid

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: release.yml
examples/: attention.py  sparkly_backend.ipynb
src/: update_headers.py
static/scripts/: containers.js
sunbraid/: __init__.py  _version.py  head.py  static.json  testmod.py
sunbraid/cell/: backend.py  line.py
sunbraid/css/: containers.css
sunbraid/static/scripts/: containers.js
